# harness

./: .gitignore  .worktreeinclude  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  entropy_hook.py  harness_hook.py  pyproject.toml
.claude/: settings.json
.claude/scripts/: context.sh
bun/: .dependency-cruiser.json  .gitignore  .harness-baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  biome.json  cucumber.json  harness.ts  knip.json  package.json  stryker.conf.json  tsconfig.json
bun/.claude/: settings.json
bun/.claude/scripts/: role-block.md
bun/.codex/: hooks.json
bun/.github/workflows/: ci.yml
bun/src/: index.ts
bun/tests/: crap.test.ts  harness-targets.test.ts  properties.test.ts  smoke.test.ts  suppressions.test.ts
bun/tests/features/: smoke.feature
bun/tests/features/steps/: crap.steps.ts  smoke.steps.ts
entropy_meter/: __init__.py  __main__.py  config.py  git.py
entropy_meter/cli/: __init__.py  measure.py  report.py
entropy_meter/core/: composite.py  db.py  metrics.py
examples/: hooks_settings.json
go/: .gitignore  .go-arch-lint.yml  .golangci.yaml  .harness-baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  harness  harness.go  main.go  main_test.go
go/.claude/: settings.json
go/.claude/scripts/: pre-edit-gate.sh  role-block.md  ups-classify.sh
go/.codex/: hooks.json
go/.codex/hooks/: codex-stop-hook.sh
go/.github/workflows/: ci.yml
go/crap/: crap.go  crap_test.go  properties_test.go
go/features/: acceptance_test.go  crap.feature  smoke.feature
go/features/steps/: crap_steps.go  smoke_steps.go
go/suppressions/: suppressions.go  suppressions_test.go
harness/: __init__.py  __main__.py  config.py
harness/cli/: __init__.py  context.py  heal.py  hook.py  install.py  main.py  measure.py  report.py  seed.py  utils.py
harness/core/: __init__.py  db.py  metrics.py
monorepo/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
monorepo/.claude/: settings.json
monorepo/.claude/scripts/: pre-edit-gate.sh  role-block.md  ups-classify.sh
monorepo/.codex/: hooks.json
monorepo/.github/workflows/: ci.yml
python/: .gitignore  .harness-baseline  .importlinter  AGENTS.md  CLAUDE.md  Makefile  README.md  dev.py  harness.py  pyproject.toml  vulture_allowlist.py
python/.claude/: settings.json
python/.claude/scripts/: pre-edit-gate.sh  role-block.md  session-start.sh  ups-classify.sh
python/.codex/: hooks.json
python/.github/workflows/: ci.yml
python/harness/: .gitignore  Makefile  pyproject.toml
python/harness/harness/: __main__.py  config.py  git.py
python/harness/harness/cli/: context.py  hook.py  install.py  measure.py  report.py  seed.py
python/harness/harness/core/: composite.py  metrics.py
python/harness/scripts/: run_silent.sh
python/harness/tests/: test_cli_heal.py  test_cli_hook.py  test_cli_main.py  test_cli_measure.py  test_cli_report.py  test_config.py  test_git.py  test_metrics.py
python/tests/: conftest.py  test_crap.py  test_harness_targets.py  test_init.py  test_properties.py  test_suppressions.py
python/tests/features/: crap.feature  environment.py  smoke.feature
python/tests/features/steps/: crap_steps.py  smoke_steps.py
rust/: .gitignore  .harness-baseline  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  arch.toml  harness.rs
rust/.cargo/: config.toml
rust/.claude/: settings.json
rust/.claude/scripts/: pre-edit-gate.sh  role-block.md  ups-classify.sh
rust/.codex/: hooks.json
rust/.github/workflows/: ci.yml
rust/src/: lib.rs  main.rs
rust/tests/: acceptance.rs  smoke.rs
rust/tests/features/: crap.feature  smoke.feature
skills/harness/: SKILL.md  reference-behavior-contract.md  reference-bun.md  reference-go.md  reference-monorepo.md  reference-python.md  reference-rust.md  reference-settings-json.md
tests/: conftest.py  test_cli_context.py  test_cli_heal.py  test_cli_hook.py  test_cli_install.py  test_cli_main.py  test_cli_measure.py  test_cli_report.py  test_cli_seed.py  test_composite.py  test_config.py  test_db.py  test_git.py  test_metrics.py
tests/fixtures/sample_project/: example.py
