[project]
name = "entropy-meter"
version = "0.1.0"
description = "Code complexity metrics engine with graceful degradation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
radon = ["radon>=5.1"]
all = ["entropy-meter[radon]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
entropy-measure = "entropy_meter.cli.measure:main"
entropy-report = "entropy_meter.cli.report:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
source = ["entropy_meter"]

[tool.coverage.report]
fail_under = 80
