[project]
name = "harness"
version = "0.1.0"
description = "Python project template with built-in harness: linting, formatting, type-checking, and testing."
requires-python = ">=3.13"
dependencies = []

[project.scripts]
harness = "harness:main"
install = "harness:install_main"
fix = "harness:fix_main"
format = "harness:format_main"
lint = "harness:lint_main"
typecheck = "harness:typecheck_main"
check = "harness:check_main"
pre-commit = "harness:pre_commit_main"
ci = "harness:ci_main"
test = "harness:test_main"
test-cov = "harness:test_cov_main"
hooks = "harness:hooks_main"
clean = "harness:clean_main"


[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

# ── Ruff (lint + format) ────────────────────────────────────────────

[tool.ruff]
target-version = "py313"
line-length = 99
preview = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify (simple > complex)
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "TCH",  # type-checking imports
    "ARG",  # unused arguments
    "PL",   # pylint subset
    "ANN",  # type annotations
    "ERA",  # flake8-eradicate (commented-out code)
    "PIE",  # flake8-pie (unnecessary placeholders)
]
ignore = [
    "ANN401",   # dynamically-typed-expressions (Any)
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-local-variables
    "PLR0915",  # too-many-statements
    "PLR0917",  # too-many-positional-arguments
    "PLR2004",  # magic-value-comparison (too noisy)
    "PLR6201",  # use-set-literal
    "PLR6301",  # method-could-be-function
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",      # type annotations relaxed in tests
    "ARG",      # unused arguments common in fixtures
    "PLC0415",  # late imports fine in tests
    "PLC1901",  # compare-to-empty-string
    "PLC2701",  # private-name-import (testing internal behavior)
    "PIE810",   # single-starts-ends-with
    "PLR2004",  # magic values fine in tests
    "RUF069",   # float equality comparisons fine in tests
    "SIM105",   # contextlib.suppress suggestion
    "TCH",      # type-checking imports (fixtures need runtime types)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Basedpyright ───────────────────────────────────────────────────

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAny = false

# ── Pytest ─────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# ── Coverage ───────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
